# mmdlp

./: .gitignore  README.md  hb_mapper_makertbin.log.1  hb_mapper_makertbin.log.2  pyproject.toml
configs/: aidi_submit_sleepinfinity.py
configs/d-robotics/dosod/: joint_space_mlp3x_l_40e_8gpus_finetune_kxj_1204_sjt_generated_1024p.py  joint_space_mlp3x_l_40e_8gpus_finetune_kxj_1210_sjt_generated_1024p.py  joint_space_mlp3x_l_40e_8gpus_finetune_kxj_1210_sjt_generated_1024p_yuv444.py
configs/horizon/dosod-l/: joint_space_mlp3x_l_40e_8gpus_finetune_kxj_1113_sjt_generated_motionblur_1024p.py  (+3 more)
configs/mmyolo/: READM.md
configs/stdc_horizon/: export.py
configs/yolov5/: yolov5_ins_s-v61_syncbn_fast_8xb16-300e_balloon_instance.py  yolov5_s-v61_fast_1xb12-40e_cat.py
configs/yolov5_taihe/: yolov5-1.5n-baseline-relu.py  yolov5-s-baseline-relu-EfficientNetLite0.py  yolov5-s-baseline-relu.py
docker/: README.md  anaconda_cu116.dockerfile  conda_init.sh  mmdlp_cu116.dockerfile
docs/: horizon.md  proxy.txt
docs/zh_cn/: 如何打包.md
mmdlp/horizon/: __init__.py  stdc.py
mmdlp/pruning/: __init__.py  models.py  pruning_channels.py
mmdlp/registry/: __init__.py  registry.py
mmdlp/tools/: settings.py  traverse_registry.py
mmdlp/utils/: __init__.py  set_env.py
requirements/: develop.txt  develop_cuda116.txt  horizon.txt  proxy.txt
tests/test_utils/: test_set_env.py
tools/: README.md  traverse_registry.py
tools/how_to_study_Torch-Pruning/: pruning_resnet18.py
tools/mmyolo/: README.md  balloon2coco.py
tutorial/how_to_study_Torch-Pruning/: functions.py
(+257 files in other folders)
