requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmdlp"
version = "0.0.1"
authors = [
  { name="FelixFu", email="alanmathisonturing@163.com" },
]
description = "Deep Learning Projects base on OpenMMLab"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FelixFu520/mmdlp"
"Bug Tracker" = "https://github.com/FelixFu520/mmdlp/issues"
